[gd_scene load_steps=3 format=3 uid="uid://bsq2kd5o5w13c"]

[ext_resource type="Script" path="res://Scripts/setting.gd" id="1_3gtbu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wtgyw"]

[node name="settings_Layout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gtbu")
dir_path = "res://Scenes"
bus_name = "0"
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 3.0
offset_top = 2.0
offset_right = 2635.0
offset_bottom = 1356.0
color = Color(0.12549, 0.137255, 0.294118, 1)

[node name="Label" type="Label" parent="CanvasLayer/ColorRect" groups=["UI_Element"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -658.0
offset_top = 24.0
offset_right = 104.0
offset_bottom = 167.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/ColorRect" groups=["UI_Element"]]
layout_mode = 0
offset_left = 162.0
offset_top = 51.0
offset_right = 274.0
offset_bottom = 103.0
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.287
anchor_top = 0.241
anchor_right = 0.69
anchor_bottom = 0.403
offset_left = 23.96
offset_top = -0.280012
offset_right = -18.8001
offset_bottom = -15.24
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer" groups=["UI_Element"]]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Sound"

[node name="VSeparator3" type="VSeparator" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_wtgyw")

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="VSeparator4" type="VSeparator" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxEmpty_wtgyw")

[node name="HSlider" type="HSlider" parent="CanvasLayer/HBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001
value = 0.5

[connection signal="pressed" from="CanvasLayer/ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="CanvasLayer/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
